--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@
   scrollbar-width: none;
 }
 
+@layer components {
+  button {
+    @apply rounded-lg;
+    /* @apply hover:shadow-md; */
+
+  }
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
